update expert.html with grammar fixes
If applied, this commit will revamp sentences for proper grammar.

--- a/expert.html
+++ b/expert.html
@@ -46,17 +46,15 @@
         <div id="project-background">
             <div class="container">
                 <h2>Introduction</h2>
-                <p>The Expert app is a social platform that allows people to connect to Experts of nearly any field by the means of their own preferred method of communication. </p>
+                <p>The Expert app is a social platform that allows people to connect to Experts in nearly any field of their preferred method of communication. </p>
                     <div class="row">
                     <div class="col-md-6">
                     <h2>Problem Statement</h2>
-                    <p>In the current age of technology people have their own preferred way of communication. Our
-                        users need a way to easily communicate their questions in a centralized format.</p>
+                    <p>In the current age of technology, people have their preferred way of communication. Our users need to be able to ask questions in a manner that can be completely comfortable.</p>
                     </div>
                     <div class="col-md-6">
                     <h2>Goals</h2>
-                    <p>Create a format that allows users to have full control of how communication is handled within
-                        the features of the application.</p>
+                    <p>Create a format that allows users to have complete control of the exchange of communication within the features within the application.</p>
                     </div>
             </div>
         </div>
@@ -72,11 +70,8 @@
                     </picture>
                     </div>
                     <div class="column col-md-6 col-lg-5">
-                    Before beginning the design process I needed to meet with potential users to learn about their
-                    habits and emotions regarding applications that were in the same field as or adjacent to my
-                    project.
-                    <p>With this information I’ll be able to synthesize the information into developing the user
-                        personas for this project.</p>
+                        Before starting the design process, I needed to meet with potential users to learn about their habits and emotions regarding applications in the same field as or adjacent to my project.
+                    <p>With this information, I can synthesize the information into developing the user personas for this project.</p>
                         <div class="userresearch_2">
                             <picture>
                                 <source srcset="img/expert/user_research_analysis_2_2.png" media="(max-width:767px)">
@@ -84,26 +79,23 @@
                             </picture>
                     </div>
 
-                <p>By using affinity mapping I was able to categorize their responses which allowed me to
-                    discover shared pain points and needs that will help direct my research.</p>
+                <p>By creating an affinity map, I could categorize their responses, which allowed me to discover shared pain points and needs. In turn, this will help direct my research.</p>
                     <picture>
                         <source srcset="img/expert/user_research_analysis_3_2.png" media="(max-width:767px)">
                         <img src="img/expert/user_research_analysis_3_2.png" alt="User Research Results" class="img2center">
                     </picture>
                 <ul>
-                    <li>Communication preference completely varies across each participant</li>
-                    <li>Common expectation is having options</li>
+                    <li>Communication preference completely varies across each participant.</li>
+                    <li>The expectation is to have options.</li>
                     <li>Participants felt more willing to participate in discussions when others were involved.</li>
-                    <li>Users only hold on to subscriptions when they feel they are getting their value’s worth.</li>
+                    <li>Users hold on to subscriptions when they are getting their value’s worth.</li>
                 </ul>
-                <p><b>Customization may be key</b> in discovering a solution.</p>
+                <p><b>Customization may be essential</b> in discovering a solution.</p>
             </div>
             </div>
         <div>
             <h2>User Personas</h2>
-            <p>Using the results of the research analysis I was able to generate two personas who closely
-                represented the targeted demographic for the project. Young and busy people who may not
-                have time to research a problem.</p>
+            <p>Using the result of the research analysis, I generated two personas that closely represented the targeted demographic for the project. Young and busy people may not have time to research a problem.</p>
                 <div class="row">
                     <div class="column">
                 <picture>
@@ -121,8 +113,7 @@
         </div>
         <div>
             <h2>Journey Maps</h2>
-            <p>Using our user personas I was able to create journey maps that allowed me to empathize with
-                Chen and Alaina by determining their motivations for their behaviors.</p>
+            <p>Using our user personas, I created journey maps that allowed me to empathize with Chen and Alaina by determining their motivations for their behaviors.</p>
                 <div class="row">
                     <div class="column">
                 <picture>
@@ -140,8 +131,8 @@
         </div>
         <div>
             <h2>Task Flows</h2>
-            <p>Now that I have my user personas I am able to identify paths and decisions my users may take
-                when completing a task.</p>
+            <p>Now that I have my user personas, I can identify paths and decisions my users may take when completing a task.
+            </p>
                 <div class="row">
                     <div class="column">
                 <picture>
@@ -159,17 +150,13 @@
         </div>
         <div>
             <h2>Site Map</h2>
-            <p>I created my own site map and compared it with the results of a card sort test from a group of
-                participants.</p>
+            <p>I created my site map and compared it with the results of a card sort test from a group of participants.</p>
                 <picture>
                     <source srcset="img/expert/site_map_1_2.png" media="(max-width:767px)">
                     <img src="img/expert/site_map_1_2.png" alt="Site Map Test" class="img2center">
                 </picture>
-                <p>I recruited 5 participants whose experience with applications varied. It was important to get all
-                    sides of the spectrum in how they would form and expect navigation to look like from
-                    applications they may see in their day-to-day lives.</p>
-                    <p>The results helped produce and refine a site map which will dictate the format of the design
-                        going forward.</p>
+                <p>I recruited 5 participants whose experience with applications varied. I needed to know how the average user may expect navigation to look based on prior experiences with similar applications.</p>
+                    <p>The results helped produce and refine a site map that will dictate the layout of the design.</p>
                         <picture>
                             <source srcset="img/expert/site_map_2_2.png" media="(max-width:767px)">
                             <img src="img/expert/site_map_2_2.png" alt="Site Map" class="img2center">
@@ -177,8 +164,7 @@
         </div>
         <div>
             <h2>Wireframes</h2>
-            <p>Once I had collected all my research and data I could begin creating wireframes and
-                prototyping the visual design for the app.</p>
+            <p>Once I had collected all my research and data, I could begin creating wireframes and prototyping the visual design for the app.</p>
                 <div class="row">
                     <div class="column">
                 <picture>
@@ -196,23 +182,20 @@
             </div>
         <div>
             <h2>Usability Testing</h2>
-            <p>With a prototype created I was ready to present my design for evaluation.</p>
-            <p>The goal was to test for ease of use when navigating through the main features with the
-                expected outcome to discover any problems that I may have overlooked so far.</p>
+            <p>With a prototype created, I was ready to present my design to be evaluated.</p>
+            <p>The goal was to test for ease of use when navigating through the main features with the expected outcome of discovering any problems I may have overlooked thus far.
+            </p>
                 <p><b>Test Objectives</b></p>
                 <ul>
                     <li>Are users capable of navigating the application just by memory of familiar design?</li>
-                    <li>Could submitting an inquiry be faster or easier? Is there anything missing? e.g.
-                        additional filters?</li>
-                    <li>Are screens efficient enough to provide users a clear understanding with navigation?</li>
+                    <li>Could submitting an inquiry be faster or more simple? Do users feel like something is missing?</li>
+                    <li>Are screens efficient enough to provide users with a clear understanding of navigation?</li>
                 </ul>
                 <picture>
                     <source srcset="img/expert/usability_testing_1_2.png" media="(max-width:767px)">
                     <img src="img/expert/usability_testing_1_2.png" alt="Usability Testing Affinity Map" class="img2center">
                 </picture>
-                <p>I executed both moderated in-person and moderated remote testing. The study involved 6
-                    participants who were in their mid-20s of various occupations that were recruited through local
-                    and online networking.</p>
+                <p>I executed both moderated in-person and moderated remote testing. The study involved 6 participants in their mid-20s in various occupations recruited through local and online networking.</p>
                     <picture>
                         <source srcset="img/expert/usability_testing_2_2.png" media="(max-width:767px)">
                         <img src="img/expert/usability_testing_2_2.png" alt="Usability Testing Rainbow Map" class="img2center">
@@ -233,8 +216,7 @@
                     </div>
                     <p><b>Issue:</b> Participants were confused by the main functionality of submitting a question<br>
                         <b>Suggested Change:</b> Make alterations to the titles for forms and selections.<br>
-                        <b>Evidence:</b> Much like the previous issue, participants who were stuck at this step asked
-                        questions about what each function would do rather than initially understanding.</p>
+                        <b>Evidence:</b> Much like the previous issue, participants became stuck at this step and asked questions about what each function would do rather than having an initial understanding.</p>
                     <div class="row">
                         <div class="column">
                         <picture>
@@ -249,18 +231,14 @@
                         </picture>
                         </div>
                     </div>
-                        <p><b>Issue:</b> Participants had issues understanding the functionality of the Delivery Preference
-                            screen.<br>
+                        <p><b>Issue:</b> Participants had problems understanding the functionality of the Delivery Preference screen.<br>
                             <b>Suggested Change:</b> Make alterations to the titles for forms and selections.<br>
-                            <b>Evidence:</b> The participants who lingered longer on the screen before taking action asked
-                            questions about the purpose of each option. It seems necessary to take another look upon
-                            improving for a better understanding.</p>
+                            <b>Evidence:</b> The participants who lingered longer on the screen before taking action asked questions about the purpose of each option. It seems necessary to take another look at improving for a better understanding.
+                        </p>
         </div>
         <div>
             <h2>Design System</h2>
-            <p>I wanted to create a cohesive theme for the application that stayed consistent and simple
-                across the entirety of the design. I referred to WCAB to ensure that the theme remained
-                accessible for as many users as possible.</p>
+            <p>I wanted to create a cohesive theme for the application that stayed consistent and simple throughout the design. I referred to WCAB to be accessible to as many users as possible.</p>
                 <picture>
                     <source srcset="img/expert/design_system_2.png" media="(max-width:767px)">
                     <img src="img/expert/design_system_2.png" alt="Design System" class="img3center">
@@ -273,18 +251,9 @@
                 <img src="img/expert/final_mockups_2.png" alt="Final Mock Ups" class="img2center">
             </picture><br>
             <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" class="userresearch_2" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FLXLKxHwvRrK7OlvS77JiXU%2FExpert%3Fnode-id%3D315%253A1380%26scaling%3Dscale-down%26page-id%3D8%253A315%26starting-point-node-id%3D315%253A1380" allowfullscreen></iframe> <br>
-            <p>Developing the Expert app was quite the journey for me. I wanted to make sure I had a full
-                connection with my potential users in every step of the way with researching, testing, and
-                surveys to ensure that the application was user centric based and I believed I achieved that
-                with the results I have so far.</p>
-                <p>A lot of the process was very new to me as it was happening and now that the project is
-                    finished I could see a lot of things I would’ve done differently. For example my interview
-                    process could be refined as I felt I wasn’t getting the answers that could help largely improve
-                    the user experience.</p>
-                    <p>To push the app further along however I would want to apply more user testing with the current
-                        version of the application and make additional changes. The UI design in the final mock up has
-                        not been finalized through testing. The forum feature has not been implemented yet and it
-                        would need user flows, functionality testing, and more.</p>
+            <p>Developing the Expert app was quite the journey for me. I wanted to make sure I had a connection with my potential users at every step of the way with researching, testing, and surveys to ensure that the application was user-centric based. I believe I achieved that with the results I have so far.</p>
+                <p>A lot of the process was very new to me as it was happening, and now that I have completed the project, I can see things I would’ve done differently. For example, with the interview process, I felt I wasn’t getting the answers that could help even further enhance the user experience. I will explore and research interview methods.</p>
+                    <p>If I were to build upon the application, I would want to apply more user testing with the current application and make additional changes. The UI design in the final mock-up has not gone through testing. The message forum has not been implemented, and it would need user flows, functionality testing, and more.</p>
                     </div>
         </div>
     </div>
