--- a/expert.html
+++ b/expert.html
@@ -50,11 +50,11 @@
                     <div class="row">
                     <div class="col-md-6">
                     <h2>Problem Statement</h2>
-                    <p>In the current age of technology, people have their preferred way of communication. Our users need to be able to ask questions in a manner that can be completely comfortable.</p>
+                    <p>In the current age of technology, people have their preferred way of communication. Our users should be able to ask questions in a manner that is most comfortable for them.</p>
                     </div>
                     <div class="col-md-6">
                     <h2>Goals</h2>
-                    <p>Create a format that allows users to have complete control of the exchange of communication within the features within the application.</p>
+                    <p>Create a format that allows users to have complete control of the exchange of communication within the features in the application.</p>
                     </div>
             </div>
         </div>
